<resources>
    <string name="grade_one">一年级</string>
    <string name="grade_two">二年级</string>
    <string name="grade_three">三年级</string>
    <string name="ksks">快速开始</string>
    <string name="jzct">家长出题</string>
    <string name="ctrj">错题日记</string>
    <string name="encourage">加油！坚持就是胜利！</string>
    <string name="shop">商城</string>
    <string name="mine">我的</string>
    <string name="input_answer">请输入你的答案</string>
    <string name="last">上一题</string>
    <string name="next">下一题</string>
    <string name="choose_grade">请选择你的年级</string>
    <string name="answer">答题</string>
    <string name="delete">清空错题日记</string>
    <string name="app_name">小天才培养计划</string>
    <string name="person">个人中心</string>
    <string name="user_name">小天才</string>
    <string name="message">消息中心</string>
    <string name="about_us">关于我们</string>
    <string name="set">设置</string>
    <string name="our_detail">HUST_CS1801_软工作业\nFROM:WYZ_BHZ_WHZ_LHJ\nWelcome to contact us!</string>

</resources>
