<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mine"
        android:background="#3366FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/mine"
        app:titleTextColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <View
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/image"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/user_name"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <View
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/coin"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="34"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/MESSAGEBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/message"
            android:text="@string/message"
            android:textSize="28dp"
            android:textStyle="italic"
            android:gravity="bottom|center"/>

        <Button
            android:id="@+id/SETBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/set"
            android:text="@string/set"
            android:textSize="28dp"
            android:textStyle="italic"
            android:gravity="bottom|center"/>



        <Button
            android:id="@+id/ABOUTUSBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/aboutus"
            android:text="@string/about_us"
            android:textSize="28dp"
            android:textStyle="italic"
            android:gravity="bottom|center"/>



    </LinearLayout>




</LinearLayout>